# kanongraph

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_NOTES.md  README.md  cliff.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: DESIGN.md
examples/: driftops-deprecated-modules.yaml  driftops.yaml  kanongraph-deprecated-modules.yaml  kanongraph.yaml  monphare-deprecated-modules.yaml  monphare.yaml
homebrew/: monphare.rb
src/: config.rs  error.rs  lib.rs  main.rs  types.rs  vcs.rs  vcs_clients.rs
src/analyzer/: conflict.rs  deprecation.rs  mod.rs  patterns.rs
src/cli/: mod.rs
src/git/: cache.rs  client.rs  mod.rs  providers.rs
src/graph/: builder.rs  export.rs  mod.rs  types.rs  types.rs.backup  types_clean.rs
src/parser/: hcl.rs  mod.rs  source.rs
src/reporter/: html.rs  json.rs  mod.rs  text.rs
test_cache/: github-test-org.json
tests/: integration_tests.rs
tests/fixtures/conflicts/repo_a/: main.tf
tests/fixtures/conflicts/repo_b/: main.tf
tests/fixtures/risky/: main.tf
tests/fixtures/simple/: main.tf
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/api/: rust-crate.md
website/docs/commands/: graph.md  init.md  scan.md  validate.md
website/docs/configuration/: analysis-options.md  cache.md  deprecations.md  overview.md  policies.md  scan-options.md
website/docs/findings/: broad-constraint.md  exact-version.md  missing-version.md  no-upper-bound.md  overview.md  prerelease-version.md  wildcard-constraint.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/scanning/: ci-cd.md  filtering-and-excluding.md  local-directories.md  org-scale.md  output-formats.md  remote-repositories.md
website/src/css/: custom.css
website/src/pages/: index.js
