[package]
name = "monphare"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["MonPhare Team"]
description = "Terraform/OpenTofu module constraint analyzer and dependency mapper"
license = "MIT"
repository = "https://github.com/tanguc/monphare"
readme = "README.md"
keywords = ["terraform", "opentofu", "hcl", "infrastructure", "devops"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "monphare"
path = "src/lib.rs"

[[bin]]
name = "monphare"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "cargo"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HCL parsing
hcl-rs = "0.18"

# Graph library for dependency mapping
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Git operations
# Use vendored OpenSSL for cross-platform builds
git2 = { version = "0.20", features = ["vendored-openssl"] }

# HTTP client for API calls and Git provider integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# URL parsing
url = "2.5"

# Glob patterns for file matching
glob = "0.3"

# File walking
walkdir = "2.4"

# Regex for pattern matching
regex = "1.10"

# Semver parsing for version constraints
semver = { version = "1.0", features = ["serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# HTML templating
askama = "0.12"

# Concurrent collections
dashmap = "5.5"

# Rayon for parallel processing
rayon = "1.8"

# Base64 encoding (for embedding assets in HTML)
base64 = "0.21"

# Colored terminal output
colored = "2.1"

# Progress bars
indicatif = "0.17"

# Table formatting for CLI
comfy-table = "7.1"

# Directory handling
dirs = "5.0"

# Async trait support
async-trait = "0.1"

# Futures utilities
futures = "0.3"
azure_devops_rust_api = { version = "0.26.1", features = ["core", "git"] }
tracing-error = "0.2.1"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.5"
test-case = "3.3"

[features]
default = []
# Future feature flags
api = []  # Enable REST API module
pulumi = []  # Future Pulumi support

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compile times during development
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"
# Disable missing_docs as we have many undocumented internal items
missing_docs = "allow"

[lints.clippy]
# Only enable standard clippy lints, not pedantic/nursery which are too strict
all = { level = "warn", priority = -1 }
# Cargo lints are useful
cargo = { level = "warn", priority = -1 }
# Allow multiple crate versions (common with async ecosystem)
multiple_crate_versions = "allow"

